@@ -1,8 +1,12 @@
-import Group15.Api.Exercise;
-import Group15.Workout;
+import Group15.Model.BodyPart;
+import Group15.Model.Equipment;
+import Group15.Model.Exercise;
+import Group15.Model.Workout;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
+
+import java.util.Collections;
 
 public class WorkoutClassTest {
     Workout testWorkout;
@@ -19,10 +23,10 @@ public class WorkoutClassTest {
 
     @Test
     public void testAddExercise() {
-        Exercise pushup = new Exercise("Pushup", "Push your body up and down", "Strength", "Chest", "None", "Easy", "None");
+        Exercise pushup = new Exercise("Pushup", "Push your body up and down", Collections.singletonList(BodyPart.Chest), Collections.singletonList(Equipment.Bodyweight), "Easy", "None", 3000);
         testWorkout.addExercise(pushup);
         Assert.assertEquals(1, testWorkout.getExercises().size());
-        Assert.assertEquals("Pushup", testWorkout.getExercises().get(0).title);
+        Assert.assertEquals("Pushup", testWorkout.getExercises().getFirst().title);
         testWorkout.addExercise(new Exercise());
         Assert.assertNotEquals(1, testWorkout.getExercises().size());
         testWorkout.addExercise(new Exercise());
@@ -32,7 +36,7 @@ public class WorkoutClassTest {
 
     @Test
     public void testRemoveExercise() {
-        Exercise situp = new Exercise("Situp", "Sit up and down", "Strength", "Abs", "None", "Easy", "None");
+        Exercise situp = new Exercise("Situp", "Sit up and down", Collections.singletonList(BodyPart.Abdominals), Collections.singletonList(Equipment.Bodyweight), "Easy", "None", 3000);
         testAddExercise();
         testWorkout.addExercise(situp);
         Assert.assertTrue(testWorkout.getExercises().contains(situp));
@@ -45,11 +49,11 @@ public class WorkoutClassTest {
     @Test
     public void testSwapExercise() {
         testRemoveExercise();
-        Assert.assertEquals("Pushup", testWorkout.getExercises().get(0).title);
-        Exercise pullup = new Exercise("Pullup", "Pull your body up and down", "Strength", "Back", "Pullup bar", "Hard", "None");
-        testWorkout.swapExercise(testWorkout.getExercises().get(0), pullup);
+        Assert.assertEquals("Pushup", testWorkout.getExercises().getFirst().title);
+        Exercise pullup = new Exercise("Pullup", "Pull your body up and down", Collections.singletonList(BodyPart.Back), Collections.singletonList(Equipment.Bodyweight), "Hard", "None", 3000);
+        testWorkout.swapExercise(testWorkout.getExercises().getFirst(), pullup);
         Assert.assertTrue(testWorkout.getExercises().contains(pullup));
-        Assert.assertFalse(testWorkout.getExercises().contains(new Exercise("Pushup", "Push your body up and down", "Strength", "Chest", "None", "Easy", "None")));
+        Assert.assertFalse(testWorkout.getExercises().contains(new Exercise("Pushup", "Push your body up and down", Collections.singletonList(BodyPart.Chest), Collections.singletonList(Equipment.Bodyweight), "Easy", "None", 3000)));
 
     }
 
